objects/IPOLightRITE__c.object
<CustomObject>
    <fields>
        <fullName>OfferAmount__c</fullName>
        <description>Displays Offer Amount in K€ related to Quote Link</description>
        <inlineHelpText>in currency</inlineHelpText>
        <label>Offer Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OfferMadeToNewCustomerPlan__c</fullName>
        <description>Holds the Action Plan for &quot;Is our offer being made to a new customer ?&quot;</description>
        <label>OfferMadeToNewCustomerPlan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OfferMadeToNewCustomer__c</fullName>
        <description>Holds the Picklist value for &quot;Is our offer being made to a new customer ?&quot;</description>
        <label>OfferMadeToNewCustomer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OfferNewRenewedContractAction__c</fullName>
        <description>Holds the Action Plan for&quot;Is this offer a new or renewed contract agreement  with a term of &gt; 12 months with firm prices? &quot;</description>
        <label>OfferNewRenewedContractAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OfferNewRenewedContractSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Is this offer a new or renewed contract agreement with a term of &gt; 12 months with firm prices?&quot;</description>
        <formula>If(ISPICKVAL(OfferNewRenewedContract__c, &apos;Yes&apos;),&apos;BU controller involved &amp; approval from BU SVP required&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OfferNewRenewedContractSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferNewRenewedContract__c</fullName>
        <description>Holds the Picklist value for&quot;Is this offer a new or renewed contract agreement  with a term of &gt; 12 months with firm prices? &quot;</description>
        <label>OfferNewRenewedContract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OfferPartOfEndUserCoreProcessPlan__c</fullName>
        <description>Displays the Action Plan for &quot;Will our offer become part of the End-User&apos;s core process? &quot;</description>
        <label>OfferPartOfEndUserCoreProcessPlan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OfferPartOfEndUserCoreProcess__c</fullName>
        <description>Displays the Picklist for &quot;Will our offer become part of the End-User&apos;s core process? &quot;</description>
        <label>OfferPartOfEndUserCoreProcess</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutsideGrpSupplierScope__c</fullName>
        <description>Displays Outside Group Supplier Scope related to Quote Link</description>
        <label>Outside Group suppliers scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OwnershipOfIntellectualPropAction__c</fullName>
        <description>Holds the Action Plan for&quot;Is ownership of Intellectual property pre-existing or developed as part of the project retained by SE? &quot;</description>
        <label>OwnershipOfIntellectualPropAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OwnershipOfIntellectualPropSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Is ownership of Intellectual property pre-existing or developed as part of the project retained by SE? &quot;</description>
        <formula>If(ISPICKVAL(OwnershipOfIntellectualProp__c, &apos;No&apos;),&apos;Legal Advice Required&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OwnershipOfIntellectualPropSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwnershipOfIntellectualProp__c</fullName>
        <description>Holds the Picklist value for&quot;Is ownership of Intellectual property pre-existing or developed as part of the project retained by SE?&quot;</description>
        <label>OwnershipOfIntellectualProp</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMhoursCOGSink__c</fullName>
        <inlineHelpText>Amount in currency</inlineHelpText>
        <label>Project Management Hours COGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ParentCompanyPlan__c</fullName>
        <description>Displays the Action Plan for &quot;Is a Parent Company Guarantee required from either Schneider Electric SA or from SEI sas?&quot;</description>
        <label>4.Parent Company Guarantee required?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ParentCompanySME__c</fullName>
        <description>Displays SME Advice for &quot;Is a Parent Company Guarantee required from either Schneider Electric SA or from SEI sas?&quot;</description>
        <formula>IF(ISPICKVAL(ParentCompany__c, &apos;Yes&apos;),&apos;Regional SRM to be involved, P1 to P7 questions to be answered &amp; Group CFO approval required&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>4.Parent Company Guarantee required?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentCompany__c</fullName>
        <description>Displays the Picklist for &quot;Is a Parent Company Guarantee required from either Schneider Electric SA or from SEI sas?&quot;</description>
        <label>4.Parent Company Guarantee required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentTermsCreditInsuranceAction__c</fullName>
        <description>Holds the Action Plan for&quot;Are the payment terms secured through credit insurance or Letter of credit?&quot;</description>
        <inlineHelpText>At least 80% of payments must be secured</inlineHelpText>
        <label>PaymentTermsCreditInsuranceAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PaymentTermsCreditInsuranceSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Are the payment terms secured through credit insurance or Letter of credit?&quot;</description>
        <formula>If(ISPICKVAL(PaymentTermsCreditInsurance__c, &apos;No&apos;),&apos;Country CFO and Corporate Finance Treasury involved&apos;, &apos;&apos;)</formula>
        <inlineHelpText>At least 80% of payments must be secured</inlineHelpText>
        <label>PaymentTermsCreditInsuranceSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentTermsCreditInsurance__c</fullName>
        <description>Holds the Picklist value for&quot;Are the payment terms secured through credit insurance or Letter of credit? &quot;</description>
        <inlineHelpText>At least 80% of payments must be secured</inlineHelpText>
        <label>PaymentTermsCreditInsurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlatinumRulesInfringement__c</fullName>
        <label>Platinum Rules infringement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrevLitigationOrBadDebtPlan__c</fullName>
        <description>Holds the Action Plan for&quot;Has there been any previous litigation or bad debt / payment overdues with this customer ?&quot;</description>
        <label>PrevLitigationOrBadDebtPlan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PrevLitigationOrBadDebt__c</fullName>
        <description>Holds the Picklist value for&quot;Has there been any previous litigation or bad debt / payment overdues with this customer ?&quot;</description>
        <label>PrevLitigationOrBadDebt</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjGrossMarginAboveMinGrossAction__c</fullName>
        <description>Holds the Action Plan for&quot;Is the project Gross Margin above the minimum gross margin level for this BU? &quot;</description>
        <label>ProjGrossMarginAboveMinGrossAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProjGrossMarginAboveMinGrossSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Is the project Gross Margin above the minimum gross margin level for this BU? &quot;</description>
        <formula>If(ISPICKVAL(ProjGrossMarginAboveMinGross__c, &apos;No&apos;),&apos;Country CFO advice required.Corporate Finance involved&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjGrossMarginAboveMinGrossSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjGrossMarginAboveMinGross__c</fullName>
        <description>Holds the Picklist value for &quot;Is the project Gross Margin above the minimum gross margin level for this BU?&quot;</description>
        <label>ProjGrossMarginAboveMinGross</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjInvExportOfGoodsAction__c</fullName>
        <description>Holds the Action Plan for&quot;Does the project involve the export of goods or delivery of services to a foreign country? Is that country under any trade or currency restriction?&quot;</description>
        <label>ProjInvExportOfGoodsAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProjInvExportOfGoodsSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Does the project involve the export of goods or delivery of services to a foreign country? Is that country under any trade or currency restriction?&quot;</description>
        <formula>If(ISPICKVAL(ProjInvExportOfGoods__c, &apos;Yes&apos;),&apos;Tax and Customs Dept involved. Insurance Dept may be involved&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjInvExportOfGoodsSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjInvExportOfGoods__c</fullName>
        <description>Holds the Picklist value for&quot;Does the project involve the export of goods or delivery of services to a foreign country? Is that country under any trade or currency restriction?&quot;</description>
        <label>ProjInvExportOfGoods</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjInvInnovativeFinAction__c</fullName>
        <description>Holds the Action Plan for&quot;Does the project involve innovative financing over the project lifetime? &quot;</description>
        <label>ProjInvInnovativeFinAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProjInvInnovativeFinSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Does the project involve innovative financing over the project lifetime?&quot;</description>
        <formula>If(ISPICKVAL(ProjInvInnovativeFin__c, &apos;Yes&apos;),&apos;Country CFO and Corporate Finance Treasury involved&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjInvInnovativeFinSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjInvInnovativeFin__c</fullName>
        <description>Holds the Picklist value for&quot;Does the project involve innovative financing over the project lifetime?&quot;</description>
        <label>ProjInvInnovativeFin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectDesc__c</fullName>
        <description>Displays the Project Description related to the Quote Link</description>
        <label>Project description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <description>Displays the Opportunity name related to the Quote Link</description>
        <formula>QuoteLink__r.OpportunityName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the Quote Link</description>
        <label>Quote Link Id</label>
        <referenceTo>OPP_QuoteLink__c</referenceTo>
        <relationshipName>IPO_Light_RITEs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReqSchToCommitPerfCommAction__c</fullName>
        <description>Holds the Action Plan for&quot;Does the project require Schneider to commit to Performance Commitments /SLA&apos;s? (% uptime, % savings, energy losses etc …)&quot;</description>
        <label>ReqSchToCommitPerfCommAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReqSchToCommitPerfCommSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Does the project require Schneider to commit to Performance Commitments /SLA&apos;s? (% uptime, % savings, energy losses etc …)?&quot;</description>
        <formula>If(ISPICKVAL(ReqSchToCommitPerfComm__c, &apos;Yes&apos;),&apos;BU Solution architect advice and BU VP approval required&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ReqSchToCommitPerfCommSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReqSchToCommitPerfComm__c</fullName>
        <description>Holds the Picklist value for&quot;Does the project require Schneider to commit to Performance Commitments /SLA&apos;s? (% uptime, % savings, energy losses etc …)&quot;</description>
        <label>ReqSchToCommitPerfComm</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RiskProvision__c</fullName>
        <inlineHelpText>in % of Offer Amount</inlineHelpText>
        <label>Risk Provision (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SEContent__c</fullName>
        <description>Holds the SE Content %</description>
        <label>SE content (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SELiableForThirdPartyAction__c</fullName>
        <description>Holds the Picklist value for&quot;Is SE liable for third party scope (consortium for example)?&quot;</description>
        <inlineHelpText>Are we part of a Consortium?
Do we have to create a New Legal Entity?</inlineHelpText>
        <label>SELiableForThirdPartyAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SELiableForThirdPartySME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;Is SE liable for third party scope (consortium for example)?&quot;</description>
        <formula>If(ISPICKVAL(SELiableForThirdParty__c, &apos;Yes&apos;),&apos;Legal / M&amp;A advice required. Country CFO advice required&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Are we part of a Consortium?
Do we have to create a New Legal Entity?</inlineHelpText>
        <label>SELiableForThirdPartySME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SELiableForThirdParty__c</fullName>
        <description>Holds the Picklist value for&quot;Is SE liable for third party scope (consortium for example)?&quot;</description>
        <inlineHelpText>Are we part of a Consortium?
Do we have to create a New Legal Entity?</inlineHelpText>
        <label>SELiableForThirdParty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEOFMajorSuppliersAction__c</fullName>
        <description>Holds the Action Plan for&quot;SE OG major suppliers ( &gt; 20% COGS ) do not accept back to back deviation to platinum rules or haven&apos;t sufficient financial health to support it ?&quot;</description>
        <label>SEOFMajorSuppliersAction</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SEOFMajorSuppliersSME__c</fullName>
        <description>Displays the question of SME Advice for the question &quot;SE OG major suppliers ( &gt; 20% COGS ) do not accept back to back deviation to platinum rules or haven&apos;t sufficient financial health to support it ?&quot;</description>
        <formula>If(ISPICKVAL(SEOFMajorSuppliers__c, &apos;Yes&apos;),&apos;Country CFO and Purchasing Dept. involved&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SEOFMajorSuppliersSME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEOFMajorSuppliers__c</fullName>
        <description>Holds the Picklist value for&quot;SE OG major suppliers ( &gt; 20% COGS ) do not accept back to back deviation to platinum rules or haven&apos;t sufficient financial health to support it ?&quot;</description>
        <label>SEOFMajorSuppliers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SampleField__c</fullName>
        <label>SampleField</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechnicalPerformanceGuaranteePlan__c</fullName>
        <description>Displays the Action Plan for &quot;Is our offer subject to technical performance guarantees ( eg: Solar plant efficiency, Energy savings, Data savings, Transmission rates ….) ?&quot;</description>
        <label>TechnicalPerformanceGuaranteePlan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TechnicalPerformanceGuarantee__c</fullName>
        <description>Displays the picklist for &quot;Is our offer subject to technical performance guarantees ( eg: Solar plant efficiency, Energy savings, Data savings, Transmission rates ….) ?&quot;</description>
        <label>TechnicalPerformanceGuarantee</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalCOGSInk__c</fullName>
        <inlineHelpText>Amount in currency</inlineHelpText>
        <label>Total COGS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TypeofContract__c</fullName>
        <label>Type of Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supply of Equipment</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Turnkey</fullName>
                </value>
                <value>
                    <fullName>Performance Contracting</fullName>
                </value>
                <value>
                    <fullName>Frame Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Light RITE</label>
    <nameField>
        <displayFormat>ILR - {0000}</displayFormat>
        <label>IPO Light RITE Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Light RITEs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LRT_VR_APR14SLS02_IndirectDamages</fullName>
        <active>true</active>
        <description>Validates that Mitigation Action Plan should be filled, if &apos;NO&apos; is selected</description>
        <errorConditionFormula>NOT($User.BypassVR__c) 
&amp;&amp; 
(AND(ISPICKVAL(ExclusionOfDamages__c,&apos;No&apos;), ISBLANK(ExclusionOfDamagesPlan__c)))</errorConditionFormula>
        <errorDisplayField>ExclusionOfDamages__c</errorDisplayField>
        <errorMessage>Please fill the Mitigation Action Plan for &apos;1. Is there an exclusion of Consequential or Indirect Damages (Loss of Profit / Data/ Use / Business and Production) from our liabilities?&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LRT_VR_APR14SLS03_DamageLimited</fullName>
        <active>true</active>
        <description>Validates that Mitigation Action Plan should be filled, if &apos;NO&apos; is selected</description>
        <errorConditionFormula>NOT($User.BypassVR__c) 
&amp;&amp; 
(AND(ISPICKVAL(DamageLimited__c,&apos;No&apos;), ISBLANK(DamageLimitedPlan__c)))</errorConditionFormula>
        <errorMessage>Please fill the Mitigation Action Plan of &apos;2. Is SE liability in terms of direct damages limited to a maximum of 100% of Contract?&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LRT_VR_APR14SLS04_LegalEntity</fullName>
        <active>true</active>
        <description>Validates that Mitigation Action Plan should be filled, if &apos;YES&apos; is selected</description>
        <errorConditionFormula>NOT($User.BypassVR__c) 
&amp;&amp; 
(AND(ISPICKVAL(LegalEntity__c,&apos;Yes&apos;), ISBLANK(LegalEntityPlan__c)))</errorConditionFormula>
        <errorMessage>Please fill the Mitigation Action Plan for &apos;3. Is a new legal entity  required as part of the project? (e.g.: Special Purpose Vehicle or JV)&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LRT_VR_APR14SLS05_ParentCompany</fullName>
        <active>true</active>
        <description>Validates that Mitigation Action Plan should be filled, if &apos;NO&apos; is selected</description>
        <errorConditionFormula>NOT($User.BypassVR__c) 
&amp;&amp; 
(AND(ISPICKVAL(ParentCompany__c,&apos;Yes&apos;), ISBLANK(ParentCompanyPlan__c)))</errorConditionFormula>
        <errorMessage>Please fill the Mitigation Action Plan for &apos;4. Is a Parent Company Guarantee required from either Schneider Electric SA or from SEI sas?&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LRT_VR_APR14SLS23_ValidateQuoteStatus</fullName>
        <active>true</active>
        <description>Checks if the Quote is approved</description>
        <errorConditionFormula>NOT($User.BypassVR__c) 
&amp;&amp; 
(Text(QuoteLink__r.QuoteStatus__c) = &apos;Approved&apos;)</errorConditionFormula>
        <errorMessage>Light RITE Information cannot be modified as the Quote is Approved.</errorMessage>
    </validationRules>
</CustomObject>